--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,18 +1,8 @@
-<table>
-  <thead>
-    <tr>
-      <td>Avatar</td>
-      <td>Id</td>
-      <td>Nome</td>
-    </tr>
-  </thead>
-  <tbody>
-    <% @champions.each do |champion| %>
-      <tr>
-        <td><img src=<%= champion.image_url %>></td>
-        <td><%= champion.id %></td>
-        <td><%= champion.name %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @champions.each do |champion| %>
+  <div class='champion-content'>
+    <a href="/champion/<%= champion.id %>">
+      <img class='champion-image' src=<%= champion.image_url %>>
+      <span class='champion-name'><%= champion.name %></span>
+    </a>
+  </div>
+<% end %>
