--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,5 +1,15 @@
 <html>
+  <head>
+    <link rel='stylesheet' type='text/css' href='/css/reset.css'>
+    <link rel='stylesheet' type='text/css' href='/css/style.css'>
+  </head>
   <body>
-    <%= yield %>
+    <header>
+      <a href='/'>Campeões</a>
+    </header>
+
+    <div class='container'>
+      <%= yield %>
+    </div>
   </body>
 </html>
